syntax = "proto3";

option go_package = "github.com/zhexiangzhang/ITU-Distributed-System-2023/proto";

package proto;

message AskForTimeMessage {
  int64 clientId = 1;
}

message TimeMessage {
  string serverName = 1;
  string time = 2;
}

service TimeAsk {
  rpc AskForTime(AskForTimeMessage) returns (TimeMessage);
}